# taco

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GLOSSARY.md  LICENSE  README.md  out
apps/sptv/: CMakeLists.txt  README.md  sptv.cpp
apps/tensor_times_vector/: CMakeLists.txt  README.md  tensor_times_vector.cpp
legion/: CMakeLists.txt  install.md  install_hdf5.md  install_openblas.md  taco_legion_header.h  taco_mapper.cpp  taco_mapper.h  test-main.cpp
legion/SpMV/: handwritten.cpp  handwritten.cu  handwritten.h
legion/cannonMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/cosma/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/cuda-test/: main.cpp  taco-generated.cu
legion/fileio/: tensor_to_hdf5.cpp  tnstohdf5.cpp
legion/hier-part-testing/: main.cpp
legion/include/: cudalibs.h  fill.cuh  fill.h  hdf5_utils.h  leaf_kernels.cuh  leaf_kernels.h  legion_utils.h  pitches.h  shard.h  string_utils.h  strings.h  taco_legion_header.h  taco_mapper.h  task_ids.h  validate.cuh  validate.h
legion/innerprod/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/johnsonMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/matvec-adapt/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/memspeed/: main.cpp
legion/mttkrp/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/placement-test/: main.cpp  taco-generated.cpp
legion/pummaMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/solomonikMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/src/: cudalibs.cu  fill.cu  hdf5_utils.cpp  legion_utils.cpp  string_utils.cpp  strings.cpp  taco_legion_header.cpp  taco_mapper.cpp  validate.cu
legion/summaMM/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/ttmc/: main.cpp  taco-generated.cpp  taco-generated.cu
legion/ttv/: main.cpp  taco-generated.cpp  taco-generated.cu
python_bindings/: CMakeLists.txt  unit_tests.py
python_bindings/include/: pyDatatypes.h  pyFormat.h  pyIndexNotation.h  pyParsers.h  pyTensor.h  pyTensorIO.h  py_index_notation.h  pyeinsum.h  pytensor.h
python_bindings/pytaco/: __init__.py
python_bindings/source/: conf.py  index.rst
python_bindings/src/: pyDatatypes.cpp  pyFormat.cpp  pyIndexNotation.cpp  pyParsers.cpp  pyTensor.cpp  pyTensorIO.cpp  py_index_notation.cpp  pydatatypes.cpp  pyeinsum.cpp  pyformat.cpp  pytaco.cpp  pytensor.cpp
src/: CMakeLists.txt  README.md  backend_c.cpp  backend_c.h  component_types.cpp  component_types.h  cuda.cpp  error.cpp  error.h  error_messages.h  expr.cpp  expr.h  expr_nodes.cpp  expr_nodes.h  expr_rewriter.cpp  expr_rewriter.h  expr_visitor.cpp  expr_visitor.h  format.cpp  format.h  internal_tensor.cpp  internal_tensor.h  ir.cpp  ir.h  ir_codegen.cpp  ir_codegen.h  ir_printer-tests.cpp  ir_printer.cpp  ir_printer.h  ir_tags.cpp  ir_visitor.cpp  ir_visitor.h  iteration_schedule.cpp  iteration_schedule.h  linalg.cpp  linalg.h  llvm.cpp  lower.cpp  lower.h  operator.cpp  (+24 more)
src/backends/: backend_c.cpp  backend_c.h  codegen_c.cpp  codegen_c.h  module.cpp  module.h
src/codegen/: codegen.cpp  codegen.h  codegen_c.cpp  codegen_c.h  codegen_cuda.cpp  codegen_cuda.h  codegen_legion.cpp  codegen_legion.h  codegen_legion_c.cpp  codegen_legion_c.h  codegen_legion_cuda.cpp  codegen_legion_cuda.h  codegen_llvm.cpp  codegen_llvm.h  codegen_spatial.cpp  codegen_spatial.h  llvm_headers.h  module.cpp
src/error/: error_checks.cpp  error_checks.h  error_messages.cpp  error_messages.h
src/expr/: README.md  expr.cpp  expr_nodes.cpp  expr_printer.cpp  expr_rewriter.cpp  expr_visitor.cpp  schedule.cpp
src/expr_nodes/: expr_nodes.cpp  expr_rewriter.cpp  expr_visitor.cpp
src/index_notation/: README.md  distribution.cpp  expr_node.cpp  expr_nodes.cpp  expr_printer.cpp  expr_rewriter.cpp  expr_visitor.cpp  index_notation.cpp  index_notation_nodes.cpp  index_notation_nodes_abstract.cpp  index_notation_printer.cpp  index_notation_rewriter.cpp  index_notation_visitor.cpp  intrinsic.cpp  iteration_algebra.cpp  iteration_algebra_printer.cpp  kernel.cpp  properties.cpp  property_pointers.cpp  provenance_graph.cpp  schedule.cpp  tensor_operator.cpp  transformations.cpp
src/io/: dns_file_format.cpp  hb_file_format.cpp  hb_file_format.h  io_util.cpp  io_util.h  mtx_file_format.cpp  mtx_file_format.h  rb_file_format.cpp  tns_file_format.cpp
src/ir/: README.md  ir.cpp  ir.h  ir_codegen.cpp  ir_codegen.h  ir_generators.cpp  ir_generators.h  ir_printer.cpp  ir_printer.h  ir_rewriter.cpp  ir_rewriter.h  ir_verifier.cpp  ir_visitor.cpp  ir_visitor.h  simplify.cpp  workspace_rewriter.cpp
src/iteration_schedule/: iteration_schedule.cpp  iteration_schedule.h  merge_lattice.cpp  merge_lattice.h  merge_rule.cpp  merge_rule.h  tensor_path.cpp  tensor_path.h
src/linalg_notation/: linalg_notation.cpp  linalg_notation_nodes_abstract.cpp  linalg_notation_printer.cpp  linalg_notation_visitor.cpp  linalg_rewriter.cpp
src/linear_algebra/: linear_algebra.cpp
src/lower/: README.md  available_exprs.cpp  available_exprs.h  compressed_mode_type.cpp  dense_mode_type.cpp  expr_tools.cpp  expr_tools.h  iteration_forest.cpp  iteration_forest.h  iteration_graph.cpp  iteration_graph.h  iteration_schedule.cpp  iteration_schedule.h  iteration_schedule_forest.cpp  (+40 more)
test/: CMakeLists.txt  README_testing.md  api-tests.cpp  codegen_c-tests.cpp  concrete-notation-tests.cpp  einsum-tests.cpp  elwise-tests.cpp  error-tests.cpp  expr-qcd-tests.cpp  expr-reduction-tests.cpp  expr-tests.cpp  expr-tests.h  expr_factory.cpp  expr_factory.h  expr_storage-tests.cpp  format-tests.cpp  index-tests.cpp  indexstmt-tests.cpp  io-tests.cpp  ir_printer-tests.cpp  lower-tests.cpp  merge_lattice-tests.cpp  notation-tests.cpp  op_factory.h  parafac-tests.cpp  qcd-tests.cpp  regression-tests.cpp  schedule-tests.cpp  split-tests.cpp  storage-tests.cpp  storage_alloc-tests.cpp  taco-cli-test.bats  tensor-tests.cpp  tensor_base-tests.cpp  tensor_types-tests.cpp  test-iteration_algebra.cpp  test-typedcomponent-memory.cpp  test.cpp  test.h  test_properties.cpp  (+42 more)
tools/: CMakeLists.txt  taco.cpp  toLanka
(+283 files in other folders)
